syntax = "proto3";
package v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "buf/validate/validate.proto";

message Version { string version = 1; }

message Config {
  string data = 1 [ (buf.validate.field).required = true ];
  string listen = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.host_and_port = true
  ];
  double rate_limit = 3 [ (buf.validate.field).required = true ];
  // Path to the geoiip database used to set web analytics country attribute.
  string geoip_db_path = 8;
  // How long data will be persisted, Older data is automatically deleted.
  google.protobuf.Duration retention_period = 10
      [ (buf.validate.field).required = true ];

  bool auto_tls = 11;
  Acme acme = 12;
  string auth_token = 13;
}

message Acme {
  string email = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.email = true
  ];
  string domain = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.hostname = true
  ];
}

message Domain { string name = 1 [ (buf.validate.field).required = true ]; }

message GetDomainResponse { repeated Domain domains = 1; }
message SendEventResponse { bool dropped = 1; }
